Fix incompatibility with MW collapse functionality

--- a/MW_tinymce.css
+++ b/MW_tinymce.css
@@ -486,9 +486,9 @@ div.mce-throbber{
 }
 
 /* Included to collapse any collapsible content */
-.mw-collapsible-content {
+/*.mw-collapsible-content {
 	display: none;
-}
+}*/
 
 .mw-gallery-traditional { 
 	display: flex; 
@@ -681,16 +681,16 @@ ul.mw-gallery-slideshow li.gallerycarousel {
     display: block
 }
 
-.mw-customtoggle,
+/*.mw-customtoggle,
 .mw-collapsible-toggle {
 	cursor: pointer;
-}
+}*/
 
 /* Collapse links in captions should be inline */
-caption .mw-collapsible-toggle,
+/*caption .mw-collapsible-toggle,
 .mw-content-ltr caption .mw-collapsible-toggle,
 .mw-content-rtl caption .mw-collapsible-toggle,
 .mw-content-rtl .mw-content-ltr caption .mw-collapsible-toggle,
 .mw-content-ltr .mw-content-rtl caption .mw-collapsible-toggle {
 	float: none;
-}
+}*/
